{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Player",
            "id": "df1a293c-ed4f-4f1e-a94e-ac59bda962a3",
            "actions": [
                {
                    "name": "Crouch",
                    "type": "PassThrough",
                    "id": "42fe676e-fe26-49c6-89ba-5eee5bb78a46",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Moving",
                    "type": "PassThrough",
                    "id": "49eda65d-ada1-4bff-9f47-bfe332feaf4b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GunOut",
                    "type": "Button",
                    "id": "676019db-37b6-47c5-a632-268f7100f6ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "ce102bfe-6bb5-4c41-ae66-a87e79f4647e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "632b207c-4db6-411c-80e1-9ade0d879b47",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "593a094d-01ea-4d0d-9cdd-749a1f77458d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skip",
                    "type": "Button",
                    "id": "b0457f35-4a7e-4991-bc46-90eae627335d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "08a3e816-0ffe-4222-b52e-9ba174186e1b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dda29b60-4a79-4b82-ba94-87bfe7e02451",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f90c3143-0070-4c52-86b9-a9f1c7a20f2e",
                    "path": "<Touchscreen>/touch4/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "GunOut",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "477bd11b-257b-4bbf-9ff4-7a54ee62c6b8",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GunOut",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c544319-24f4-4728-a8bd-cd7f69a5ce68",
                    "path": "<Touchscreen>/touch1/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90bb85d1-e3e6-4df2-8fde-eb0f8770c52c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a61b0ab-eef6-45cf-92f1-f8539a37ce26",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13d81352-3c08-41e6-a4b4-133cebae22e0",
                    "path": "<Touchscreen>/touch8/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "133ccf97-d42e-46e3-9abb-b0a154cf8a14",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2bbb261c-e65b-4bff-944f-ed0935e57c0d",
                    "path": "<Touchscreen>/touch3/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b7203ff-2973-4bf0-9379-c57bb6c292d4",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eae3eedc-8196-4d32-8147-dfed6927d076",
                    "path": "<Touchscreen>/touch2/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "483efd1d-aec4-4b8d-b4d1-f9201beab7b5",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Minigames",
            "id": "eb77a7ba-a282-4d6d-b9e6-8c6ab5c3f225",
            "actions": [
                {
                    "name": "PlacePipe",
                    "type": "Button",
                    "id": "330a6cf2-201e-4a0c-888a-923f5118436b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Button",
                    "id": "71405c40-7c10-4626-80d2-2323ab4f022d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaceBentPipe",
                    "type": "Button",
                    "id": "a6d38f7a-d233-43a0-8e24-d2f13d7c43e3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClickLockPick",
                    "type": "Button",
                    "id": "a7da4340-c763-488d-ac6d-f59875f2117a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClickToTop",
                    "type": "Button",
                    "id": "59feef33-1e1f-4d39-bc78-5ecf2feb841c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseUp",
                    "type": "PassThrough",
                    "id": "a9d00ce9-506d-415b-94c9-b8235806f5eb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DragWire",
                    "type": "Button",
                    "id": "5a8e879c-7ee8-48b3-bb13-1eecddd26e9c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Point",
                    "type": "Value",
                    "id": "a462131d-4418-42e7-880f-f30725213ce5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DragAndMove",
                    "type": "Value",
                    "id": "0871f5c1-1de4-49b8-aebc-8c8ee9a09aad",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9c1269e0-7cac-490e-96a1-167cbdd867a3",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlacePipe",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "658d6cd0-d469-4abe-9d3e-ac69abb4de90",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "990c37ba-a279-429d-9c5b-3935bbbe6eaa",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceBentPipe",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ef0f3f6-abc4-4c83-8967-d90b71e1ae03",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickLockPick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "323a026d-bdd7-43f8-977f-405a5f586cf4",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickToTop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "284d441d-8946-498a-a76f-75a4547706af",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickToTop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b725dc6c-5a0f-4634-8f02-d3e5945aba0f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48f55e67-2e27-46d7-b63a-1ee20c93ce3d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragWire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23592be4-40b1-4b8d-b7f5-3d77a0894ef3",
                    "path": "<Touchscreen>/touch*/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragWire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97dbc674-17c1-477f-b954-e593c8fa5a5e",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98f00afe-3709-4f1b-8551-352090a708b5",
                    "path": "<Touchscreen>/touch*/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09902fb0-49c7-4baf-835b-17d564293ef4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragAndMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0df21e8b-b5dc-491f-b761-426ed489e959",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragAndMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "OnTilt",
            "id": "8d8fb079-d451-4e02-9dea-d4f26235cbe5",
            "actions": [
                {
                    "name": "Tilt",
                    "type": "Value",
                    "id": "eb4780a6-e4ae-4acc-a44d-11e2da2a3cb2",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "51ad4627-d0b3-4a78-bf12-bb1ec31f120a",
                    "path": "<AttitudeSensor>/attitude",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tilt",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}